# spaceship-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/spaceship_mcp/: __init__.py  client.py  server.py
tests/: conftest.py  test_agents.py  test_executions.py  test_orchestration_server.py  test_orchestrations.py  test_projects.py  test_runs.py  test_server.py  test_tools.py
